--- a/preprocess_linear.ipynb
+++ b/preprocess_linear.ipynb
@@ -1603,11 +1603,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "65506c268200829addff9d8b31ed65033dd63174c634412656541f3627387210"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.11 ('allen')",
+   "display_name": "Python 3.7.13 ('allen')",
    "language": "python",
    "name": "python3"
   },
@@ -1621,9 +1618,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "115fb36cf5017f47393cd1d72383073dd25093d4dd48255cc4dcc17fb65b3290"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
